# xrpl-hooks

./: Cargo.toml  HISTORY.md  README.md  bindings
.github/workflows/: CI.yml
c_bindings/: bindings.rs
c_bindings/h/: hookapi.h  hookmacro.h  sfcodes.h
src/: _c.rs  api.rs  error.rs  helpers.rs  lib.rs  macros.rs
src/api/: control.rs  etxn.rs  float.rs  ledger.rs  mod.rs  otxn.rs  slot.rs  state.rs  sto.rs  trace.rs  util.rs
