[package]
name = "xrpl-hooks"
version = "0.1.0"
edition = "2018"
authors = ["Stanislav Otovchits <otov4its@gmail.com>"]
description = "XRPL Hooks API"
license = "MIT"
repository = "https://github.com/otov4its/xrpl-hooks/"
readme = "README.md"
keywords = ["xrp", "xrpl", "hook", "hooks", "cryptocurrencies"]
categories = ["wasm", "no-std", "cryptography::cryptocurrencies"]
